# logbook

./: .gitignore  .hgignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES  Cargo.toml  ENUM  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  Vagrantfile  appveyor.yml  legacy_tests.py  logbook.py  noxfile.py  pyproject.toml  setup.cfg  setup.py  test_logbook.py  testwin32log.py  tox.ini  twitter-secrets.txt
.appveyor/: after_test.bat  build.cmd  prepare.bat
.github/: dependabot.yml
.github/workflows/: main.yml  pypi-publish.yml  tests.yml  wheel-builder.yml  wheels.yml
benchmark/: bench_disabled_introspection.py  bench_disabled_logger.py  bench_enabled_introspection.py  bench_file_handler.py  bench_file_handler_unicode.py  bench_logger_creation.py  bench_logger_level_low.py  bench_logging_file_handler.py  bench_logging_file_handler_unicode.py  bench_logging_logger_creation.py  bench_logging_logger_level_low.py  bench_logging_noop.py  bench_logging_noop_filter.py  bench_logging_stream_handler.py  bench_noop.py  bench_noop_filter.py  bench_noop_filter_on_handler.py  bench_redirect_from_logging.py  bench_redirect_to_logging.py  bench_stack_manipulation.py  bench_stream_handler.py  bench_test_handler.py  run.py
docs/: Makefile  api.rst  compat.rst  conf.py  cookbook.rst  designdefense.rst  designexplained.rst  features.rst  index.rst  libraries.rst  make.bat  performance.rst  quickstart.rst  requirements.txt  setups.rst  stacks.rst  ticketing.rst  unittesting.rst
docs/api/: base.rst  compat.rst  handlers.rst  index.rst  internal.rst  more.rst  notifiers.rst  processor.rst  queues.rst  ticketing.rst  utilities.rst
docs/sheet/: layout.html  theme.conf
docs/sheet/static/: sheet.css_t
logbook/: __init__.py  __version__.py  _fallback.py  _speedups.pyx  _stringfmt.py  _termcolors.py  base.py  compat.py  concurrency.py  handlers.py  helpers.py  more.py  notifiers.py  pycompat.py  queues.py  string2.py  ticketing.py  utils.py
logbook/pycompat/: __init__.py  python24.py  python25.py
logbook/testsuite/: __init__.py  test_contextmanager.py  test_regular.py
scripts/: make-release.py  pypi_mirror_setup.py  run_tests.py  test_setup.py  travis_build.py
src/cython/: speedups.pyx
src/logbook/: __init__.py  __version__.py  _fallback.py  _termcolors.py  base.py  compat.py  concurrency.py  handlers.py  helpers.py  more.py  notifiers.py  queues.py  ticketing.py  utils.py
src/rust/: Cargo.toml
src/rust/src/: contextvars.rs  lib.rs
tests/: conftest.py  test_asyncio.py  test_ci.py  test_deadlock.py  test_file_handler.py  test_fingers_crossed_handler.py  test_flags.py  test_groups.py  test_handler_errors.py  test_handlers.py  test_handlers_gevent.py  test_helpers.py  test_log_record.py  test_logbook.py  test_logger.py  test_logging_api.py  test_logging_compat.py  test_logging_times.py  test_mail_handler.py  test_more.py  test_nteventlog_handler.py  test_null_handler.py  test_processors.py  test_queues.py  test_speedups.py  test_syslog_handler.py  test_test_handler.py  test_ticketing.py  test_unicode.py  test_utils.py  utils.py
