[build-system]
requires = ["setuptools", "Cython; python_implementation == 'CPython'"]
build-backend = "setuptools.build_meta"

[project]
name = "Logbook"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Armin Ronacher", email = "armin.ronacher@active-4.com" },
    { name = "Georg Brandl" },
]
description = "A logging replacement for Python"
readme = "README.md"
maintainers = [
    { name = "Frazer McLean", email = "frazer@frazermclean.co.uk" },
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
Documentation = "https://logbook.readthedocs.io"
"Source Code" = "https://github.com/getlogbook/logbook"

[project.optional-dependencies]
test = ["pytest>=6", "pytest-rerunfailures"]
dev = ["Logbook[test]", "tox>=4"]
execnet = ["execnet>=1.0.9"]
sqlalchemy = ["sqlalchemy>=1.4"]
redis = ["redis"]
zmq = ["pyzmq"]
jinja = ["Jinja2"]
compression = ["brotli"]
all = ["Logbook[execnet,sqlalchemy,redis,zmq,jinja,compression,nteventlog]"]
nteventlog = ["pywin32; platform_system == 'Windows'"]
docs = ["Sphinx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.cibuildwheel]
skip = "pp*"
environment = { LDFLAGS = "-Wl,--strip-all" }
environment-pass = ["SOURCE_DATE_EPOCH"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[[tool.cibuildwheel.overrides]]
# Don't strip wheels on macOS.
# macOS doesn't support stripping wheels with linker
# https://github.com/MacPython/numpy-wheels/pull/87#issuecomment-624878264
select = "*-macosx*"
environment = { CFLAGS = "-g0" }
